tests/compile-fail/integration__integration__anm_features__anti_scratch_bad_in_func.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: scratch registers are disabled in this script
   ┌─ <input>:36:27
   │
36 │         F3 = (F0 + 1.0) * ((F0 + 2.0) * (F0 + 3.0));
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^ this fancy expression requires a scratch register
37 │ 
38 │         copyVars();
   │         ^^^^^^^^^^ this disables scratch registers


